サンプルソース追加

--- a/javaee6-project_compare-maven_enterprise-web/pom.xml
+++ b/javaee6-project_compare-maven_enterprise-web/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>javaee6-project_compare-maven_enterprise-ejb</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
